# valorant-esport-simulator

./: .gitignore  API_CONSOLIDATION.md  README.md  demo_match.py  docker-compose.monitoring.yml  open_browser.sh  package-lock.json  pyproject.toml  requirements.txt  run_game.py  setup.py  start-monitoring.sh  start-prometheus-local.sh  start.sh  test_complex_update.sh  test_db_match.py  test_different_player.sh  test_player_update.sh  test_stat_update.sh  valorant_sim.db
app/: __init__.py  game.py  main.py
app/api/: main.py
app/api/v1/: __init__.py  league.py  maps.py  match.py  metrics.py  player.py  team.py  tournament.py
app/core/: analytics.py  config.py  prometheus.py
app/db/: base_class.py  init_db.py  session.py
app/frontend/: package-lock.json  package.json
app/frontend/public/: index.html  manifest.json
app/frontend/src/: App.tsx  config.ts  index.js  index.tsx  theme.ts
app/models/: analytics.py  league.py  match.py  match_history.py  player.py  team.py  tournament.py
app/repositories/: league_repository.py  match_repository.py  team_repository.py
app/scripts/: demo.py
app/simulation/: __init__.py  demo.py  maps.py  match.py  match_engine.py  match_sim.py  player.py  player_generator.py  player_validation.py  team.py  test_data_generator.py  weapons.py
docs/: TECHNICAL_DESIGN.md
prometheus/: README.md  prometheus.local.yml  prometheus.yml
prometheus/grafana/dashboards/: franchise-dashboard.json  (+1 more)
tests/: __init__.py  test_player.py  test_player_generator.py
tests/simulation/: __init__.py  test_match_engine.py  test_weapons.py
(+55 files in other folders)
